<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ru.yandex.yandexmapkit.MapView
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:apiKey="~EP0SY1Fa9J-87~jGYLf-L2njnmSIliXIMyFqgBgMQyEAVQxOQPjoYY5VyaLNcu9mIwDD5ZP72k8M9tClPKbAwtK2wgF3pCAGVFl8G3XpqI=" />

                <LinearLayout
                    android:id="@+id/priseView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical"
                    android:visibility="invisible">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/pay_info_text"
                        android:textColor="@color/colorTextPrise"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/prise"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/colorTextPrise"
                        android:textSize="80sp" />

                </LinearLayout>


            </RelativeLayout>

            <LinearLayout
                android:id="@+id/status_bar_active"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/order_status"
                            style="@style/textViewStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            style="@style/textViewStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/order_counter" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/counter"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="8dp"
                        android:gravity="right|center_vertical"
                        android:text="@string/pay_info"
                        android:textColor="@color/colorTextPrise"
                        android:textSize="30sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/timer"
                    style="@style/textViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/big_margin" />

                <TextView
                    android:id="@+id/distance"
                    style="@style/textViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/big_margin" />

                <TextView
                    android:id="@+id/my_speed"
                    style="@style/textViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/big_margin" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <LinearLayout
            android:id="@+id/order_begin_set"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/on_fixation_click"
                style="@style/customButtonsStyle"
                android:background="@drawable/left_order_button">

                <TextView
                    style="@style/textViewInButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fixation" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ready_to_go_click"
                style="@style/customButtonsStyle"
                android:background="@drawable/right_order_button">

                <TextView
                    style="@style/textViewInButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ready_to_go" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/order_active_set"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/on_calculation_click"
                style="@style/customButtonsStyle"
                android:background="@drawable/left_order_button">

                <TextView
                    style="@style/textViewInButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calculation" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/on_wait_click"
                style="@style/customButtonsStyle"
                android:background="@drawable/right_order_button">

                <TextView
                    style="@style/textViewInButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stop" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/order_end_set"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/on_pay_click"
                style="@style/customButtonsStyle"
                android:background="@drawable/left_order_button">

                <TextView
                    style="@style/textViewInButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pay" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/on_go_on_click"
                style="@style/customButtonsStyle"
                android:background="@drawable/right_order_button">

                <TextView
                    style="@style/textViewInButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/go_on" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
